# qherlock

./: .gitignore  README.md  pyproject.toml
deploy/: us.quorum.qherlock.plist  us.quorum.querlock.plist  us.quorum.sherlock.plist
docs/superpowers/plans/: 2026-07-20-sherlock-m0-skeleton.md  2026-07-21-sherlock-m1-shadow-patrols.md  2026-07-21-slack-token-transport.md  2026-07-22-m2a-detection-fixes.md  2026-07-23-m2b-ca-extraordinary-sessions.md  2026-07-23-querlock-actacollecta-graduation.md
qherlock/: cli.py  config.py  investigate.py  slack.py
qherlock/agent/: patrol.py  tools.py
qherlock/casefiles/: store.py
qherlock/diff/: detectors.py  matchers.py  service.py
qherlock/legiscan/: sync.py
qherlock/quorum/: reader.py
querlock/: cli.py  config.py  investigate.py  slack.py
querlock/agent/: patrol.py  tools.py
querlock/casefiles/: store.py
querlock/diff/: detectors.py  matchers.py  service.py
querlock/legiscan/: sync.py
sherlock/: cli.py  config.py  investigate.py  regions.py  slack.py
sherlock/agent/: patrol.py  tools.py
sherlock/casefiles/: models.py  store.py
sherlock/diff/: detectors.py  matchers.py  service.py
sherlock/legiscan/: cache.py  client.py  sync.py
sherlock/quorum/: reader.py
tests/: test_agent_tools.py  test_casefiles.py  test_cli.py  test_config.py  test_deploy.py  test_detectors.py  test_diff_service.py  test_investigate.py  test_legiscan_cache.py  test_legiscan_client.py  test_legiscan_sync.py  test_matchers.py  test_patrol.py  test_quorum_reader.py  test_regions.py  test_slack.py
tests/evals/: test_fp_families.py
(+12 files in other folders)
