[project]
name = "sherlock"
version = "0.1.0"
description = "Agentic auditor: LegiScan vs Quorum legislative data"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "httpx>=0.27",
    "typer>=0.12",
    "pydantic-settings>=2.4",
    "structlog>=24.1",
    "psycopg[binary]>=3.2",
]

[project.scripts]
sherlock = "sherlock.cli:app"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sherlock"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
